--- a/EmsysAutoTests/EmsysAutoTests.csproj
+++ b/EmsysAutoTests/EmsysAutoTests.csproj
@@ -49,6 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DashboardPage.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="LoginPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
